# metamorph

./: .envrc  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_WALKTHROUGH.md  CONSTITUTION.md  Cargo.toml  GEMINI.md  INSTRUCTIONS.md  POLICY.md  README.md  USER_GUIDE.md  flake.nix  justfile  keel.toml  rust-toolchain.toml
.keel/: README.md
.keel/epics/VFbp961HM/: PRD.md  README.md
.keel/epics/VFeOQzrXV/: PRD.md  README.md
.keel/epics/VFepvp0Xe/: PRD.md  README.md
.keel/epics/VFg6yYH7e/: PRD.md  README.md
.keel/epics/VFg6zB3Ej/: PRD.md  README.md
.keel/epics/VFg70aqT7/: PRD.md  README.md
.keel/missions/VFboWLXyp/: CHARTER.md  LOG.md  README.md
.keel/missions/VFboWLbyr/: CHARTER.md  LOG.md  README.md
.keel/missions/VFboWLpym/: CHARTER.md  LOG.md  README.md
.keel/missions/VFg6fZ9rW/: CHARTER.md  LOG.md  README.md
.keel/missions/VFg6gc9yJ/: CHARTER.md  LOG.md  README.md
.keel/missions/VFg6h5n3I/: CHARTER.md  LOG.md  README.md
.keel/stories/VFbpfFREX/: README.md  manifest.yaml
.keel/stories/VFbpqCwMh/: README.md  manifest.yaml
.keel/stories/VFbpqDTMe/: README.md  manifest.yaml
.keel/stories/VFeOyo75T/: README.md  manifest.yaml
.keel/stories/VFeP0CgFv/: README.md  manifest.yaml
.keel/stories/VFeP1hOSP/: README.md  manifest.yaml
.keel/stories/VFeP36PdD/: README.md  manifest.yaml
.keel/stories/VFeP4W9oz/: README.md  manifest.yaml
.keel/stories/VFeP62U17/: README.md  manifest.yaml
.keel/stories/VFeP8KmRj/: README.md  manifest.yaml
.keel/stories/VFeq4jwRJ/: README.md  manifest.yaml
.keel/stories/VFeq5I2VV/: README.md  manifest.yaml
.keel/stories/VFeq5vMag/: README.md  manifest.yaml
.keel/stories/VFeq6SWea/: README.md  manifest.yaml
.keel/stories/VFeq70Ojz/: README.md  manifest.yaml
.keel/stories/VFeq7Ykva/: README.md  manifest.yaml
.keel/stories/VFeq8BW02/: README.md  manifest.yaml
.keel/stories/VFeq8jk4I/: README.md  manifest.yaml
.keel/stories/VFeq9Fx9k/: README.md  manifest.yaml
.keel/stories/VFeq9l6DC/: README.md  manifest.yaml
.keel/stories/VFeqAHQIJ/: README.md  manifest.yaml
.keel/stories/VFg8FMeq0/: README.md  manifest.yaml
.keel/stories/VFg8FN0q1/: README.md  manifest.yaml
.keel/stories/VFg8FNDq2/: README.md  manifest.yaml
.keel/stories/VFg8FNQq3/: README.md  manifest.yaml
.keel/stories/VFg8FNhqy/: README.md  manifest.yaml
.keel/stories/VFg8H4J4L/: README.md  manifest.yaml
.keel/stories/VFg8H4d4M/: README.md  manifest.yaml
.keel/stories/VFg8H4v4N/: README.md  manifest.yaml
.keel/stories/VFg8H594W/: README.md  manifest.yaml
.keel/stories/VFg8H5M5J/: README.md  manifest.yaml
.keel/stories/VFgfuAvFN/: README.md  manifest.yaml
.keel/stories/VFgfuBPFb/: README.md  manifest.yaml
.keel/stories/VFgfuBuGr/: README.md  manifest.yaml
.keel/stories/VFgfuCNHL/: README.md  manifest.yaml
.keel/stories/VFgfuCtIb/: README.md  manifest.yaml
.keel/stories/VFgfuDPIp/: README.md  manifest.yaml
.keel/stories/VFgfuDwK5/: README.md  manifest.yaml
.keel/stories/VFgfuEVL5/: README.md  manifest.yaml
.keel/stories/VFgfuF6LJ/: README.md  manifest.yaml
.keel/stories/VFgfuFfFO/: README.md  (+1 more)
crates/metamorph/: Cargo.toml
crates/metamorph-cli/: Cargo.toml
crates/metamorph-cli/src/: main.rs
crates/metamorph-cli/tests/: cache.rs  convert.rs  inspect.rs  upload.rs  validate.rs
crates/metamorph/src/: cache.rs  error.rs  format.rs  lib.rs  plan.rs  publish.rs  remote.rs  remote_publish.rs  source.rs  tests.rs  transform.rs  validate.rs
nix/: metamorph.nix
(+96 files in other folders)
