[workspace]
members = [
    "crates/metamorph",
    "crates/metamorph-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["metamorph contributors"]
license = "MIT"
repository = "https://github.com/rupurt/metamorph"
homepage = "https://github.com/rupurt/metamorph"

[workspace.dependencies]
metamorph = { path = "crates/metamorph" }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[profile.dist]
inherits = "release"
lto = "thin"
