[workspace]
members = [
    "crates/metamorph",
    "crates/metamorph-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["metamorph contributors"]
license = "MIT"
repository = "https://github.com/rupurt/metamorph"
homepage = "https://github.com/rupurt/metamorph"

[workspace.dependencies]
metamorph = { path = "crates/metamorph" }
anyhow = "1"
base64 = "0.22"
candle-core = "0.10.2"
clap = { version = "4.5", features = ["derive"] }
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
tokenizers = { version = "0.22.0", default-features = false, features = ["onig"] }
ureq = { version = "3.3.0", features = ["json"] }

[profile.dist]
inherits = "release"
lto = "thin"
