[package]
name = "metamorph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Library support for converting local AI model artifacts between runtime-specific formats"

[dependencies]
candle-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokenizers.workspace = true

[dev-dependencies]
tempfile = "3"
