[package]
name = "metamorph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Library support for converting local AI model artifacts between runtime-specific formats"

[dependencies]
base64.workspace = true
candle-core.workspace = true
hf-hub.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile = "3"
